# crawl-hog

./: .env.template  .gitignore  README.md  chog.sh  crawl.py  pyproject.toml  requirements.txt  setup.py
Formula/: crawlhog.rb
crawlhog/: __init__.py
crawlhog/cli/: main.py
crawlhog/core/: crawler.py
react-docs/: learn-describing-the-ui.md  manifest.json
